--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,5 +294,6 @@
     <string name="closed">Closed</string>
     <string name="order_value_low">Order value is low</string>
 
+    <string name="mobile_number"><u>+91-9045496024</u>.</string>
 
 </resources>
